--- a/client/index.html
+++ b/client/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Kodng AI</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <div id="chat_container"></div>
+
+      <form>
+        <textarea name="propmt" rows="1" cols="1" placeholder="Ask Me..."></textarea>
+        <button type="submit"><img src="assets/send.svg"></button>
+      </form>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
