--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <div id="app">
-      <div id="chat_container"></div>
+      <div id="chat_container">
+      </div>
 
       <form>
         <textarea name="propmt" rows="1" cols="1" placeholder="Ask Me..."></textarea>
